# evolucao-de-software

./: .gitignore  README.md  go.mod  pyproject.toml  run_spectra_cat_go.py  run_spectra_cat_go.sh
.spectra-runs/20260701T011204Z/: 00-source-map.md
.spectra-runs/20260701T011204Z/prompts/: source-map.prompt.md  static-spec.prompt.md
.spectra-runs/20260701T011204Z/reports/: scores.tsv  summary.md  test-results.tsv
.spectra-runs/20260701T011204Z/specs/: descriptions.md  io.md  static.md
.spectra-runs/20260701T015652Z/: 00-source-map.md
.spectra-runs/20260701T015652Z/prompts/: descriptions.prompt.md
.spectra-runs/20260701T015652Z/reports/: scores.tsv  summary.md  test-results.tsv
.spectra-runs/20260701T015652Z/specs/: descriptions.md  io.md  static.md
.spectra-runs/20260706T012151Z/: run.json
.spectra-runs/20260706T012151Z/.eval-bin/: baseline_1  baseline_2  baseline_3  spectra_io_1  spectra_static_1
.spectra-runs/20260706T012151Z/reports/: scores.tsv  summary.md  test-results.tsv
.spectra-runs/20260706T012151Z/specs/: io.md  static.md
.spectra-runs/20260706T012224Z/: run.json
.spectra-runs/20260706T012224Z/.eval-bin/: baseline_1  baseline_2  spectra_io_1
.spectra-runs/20260706T012224Z/prompts/: descriptions.prompt.md
.spectra-runs/20260706T013220Z/: run.json
.spectra-runs/20260706T013914Z/: run.json
spectra_runner/: __init__.py  cli.py  config.py  generation.py  logging_utils.py  workflow.py
spectra_runner/generators/: __init__.py  base.py  cli.py  factory.py  openrouter.py
tests/: test_config.py  test_generation.py  test_generators.py
(+85 files in other folders)
