[project]
name = "spectra-cat-go"
version = "0.1.0"
description = "Provider-neutral SPECTRA C-to-Go experiment runner"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.68.0",
]

[project.scripts]
spectra-cat-go = "spectra_runner.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spectra_runner"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
